--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     </title>
 </head>
 <body>
-  TESTAS DIZAINAS  
-<div>
-    <img src="Test1.png" alt="Test1"
+ <main>
+      <div>
+        <img src="Test1.png" alt="Test1">
+      </div>
+  </main>
+    <img src="Test3.png" alt="Test3">
+    <p>CLIENT
+      KICKOF
+    </p>
 </div>
 
 
@@ -18,7 +24,7 @@
 
 </body>
 <div>
-<img src="Testas Dizainas.png" alt="Testas Dizainas"
+<img src="Testas Dizainas.png" alt="Testas Dizainas">
 </div>
 
 
