--- a/index.html
+++ b/index.html
@@ -5,29 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TESTAS DIZAINAS  </title>
-    </title>
 </head>
 <body>
- <main>
-      <div>
+  
+  <div>
         <img src="Test1.png" alt="Test1">
-      </div>
-  </main>
-    <img src="Test3.png" alt="Test3">
-    <p>CLIENT
-      KICKOF
-    </p>
+  </div>
+  <p>CLIENT KICKOF </p>
+<footer>
+
+
+</footer>
+
+<div>
+<img src="Test3.png" alt="Test3">
 </div>
+    <p>CLIENT KICKOF </p>
 
+<footer>
 
-
+</footer>
 
 </body>
-<div>
+
+
+
+
 <img src="Testas Dizainas.png" alt="Testas Dizainas">
-</div>
 
-
-
-</div>
 </html>
