--- a/index.html
+++ b/index.html
@@ -6,12 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TESTAS DIZAINAS  </title>
 </head>
+<head>
+<style>
+  .flex-container {
+display:flex;
+flex-direction: ;
+background-color: rgb(208, 222, 234);
+
+  }
+.flex-container div {
+  background-color: rgb(60, 126, 183);
+  width: 100px;
+  margin: 10px;
+  text-align: center;
+  line-height: 75px;
+  font-size: 30px;
+}
+</style>
+</head>
 <body>
+
+  <h1> Tre flex-direction: Property</h1>
+
+    <p>The "flex-direction:row;"stack the flex items horizontally 
+    (from left to right):</p>
+
+    <div>
+      <img src="Test1.png" alt="Test1">
+    </div>
+
+
+
+
+
+
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+    </div>
+
   
   <div>
         <img src="Test1.png" alt="Test1">
   </div>
-  <p>CLIENT KICKOF </p>
+  <p>CLIENT KICKOFF </p>
+
 <footer>
 
 
@@ -20,7 +59,7 @@
 <div>
 <img src="Test3.png" alt="Test3">
 </div>
-    <p>CLIENT KICKOF </p>
+    <p>CLIENT KICKOFF </p>
 
 <footer>
 
