--- a/index.html
+++ b/index.html
@@ -5,71 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TESTAS DIZAINAS  </title>
-</head>
-<head>
-<style>
-  .flex-container {
-display:flex;
-flex-direction: ;
-background-color: rgb(208, 222, 234);
+    <link rel="stylesheet" href="/css/main.css">
+  </head>
 
-  }
-.flex-container div {
-  background-color: rgb(60, 126, 183);
-  width: 100px;
-  margin: 10px;
-  text-align: center;
-  line-height: 75px;
-  font-size: 30px;
-}
-</style>
-</head>
-<body>
+  <body>
+  <div class="column">
+      <img src="css/Test1.png" alt="Test1">
+      <img src="css/Test3.png" alt="Test3">
 
-  <h1> Tre flex-direction: Property</h1>
+  </div>
 
-    <p>The "flex-direction:row;"stack the flex items horizontally 
-    (from left to right):</p>
+<h1>  
+  CLIENT   KICKOF
+</h1>
+<p>
 
-    <div>
-      <img src="Test1.png" alt="Test1">
-    </div>
+  CLIENT   KICKOF
+</p>
 
-
-
-
-
-
-    <div>2</div>
-    <div>3</div>
-    <div>4</div>
-    </div>
+  <footer>
+    <span> klkllll</span> 
+  </footer>
 
   
-  <div>
-        <img src="Test1.png" alt="Test1">
-  </div>
-  <p>CLIENT KICKOFF </p>
-
-<footer>
-
-
-</footer>
-
-<div>
-<img src="Test3.png" alt="Test3">
-</div>
-    <p>CLIENT KICKOFF </p>
-
-<footer>
-
-</footer>
-
-</body>
-
-
-
-
-<img src="Testas Dizainas.png" alt="Testas Dizainas">
-
-</html>
+  </body>
+  </html>
