--- a/index.html
+++ b/index.html
@@ -5,28 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TESTAS DIZAINAS  </title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./main.css">
   </head>
 
   <body>
-  <div class="column">
-      <img src="css/Test1.png" alt="Test1">
-      <img src="css/Test3.png" alt="Test3">
-
-  </div>
-
-<h1>  
-  CLIENT   KICKOF
-</h1>
-<p>
-
-  CLIENT   KICKOF
-</p>
-
-  <footer>
-    <span> klkllll</span> 
-  </footer>
-
-  
+    <body>
+      <main class="container">
+          <div class="column">
+              <img class="img1" src="img1.svg" alt="img1">
+              <a href="#" class="column-1">Client kickoff</a>
+              <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis ipsum dicta optio pariatur nemo officiis illum iste voluptate perferendis. Doloremque aliquam dolor sit aspernatur quam, cumque ipsa iste delectus ea!</p>
+          </div>
+          <div class="column">
+              <img class="img2" src="img2.svg" alt="img2">
+              <a href="#" class="column-2nd">Messaging development</a>
+              <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis ipsum dicta optio pariatur nemo officiis illum iste voluptate perferendis. Doloremque aliquam dolor sit aspernatur quam, cumque ipsa iste delectus ea!</p>
+      
+          </div>
+          <div class="column">
+              <img class="img3" src="img3.svg" alt="img3">
+              <a href="#" class="column-3rd">Sales alignment</a>
+              <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis ipsum dicta optio pariatur nemo officiis illum iste voluptate perferendis. Doloremque aliquam dolor sit aspernatur quam, cumque ipsa iste delectus ea!</p>
+          </div>
+          <div class="column">
+              <img class="img4" src="img4.svg" alt="img4">
+              <a href="#" class="column-4th">Campaign strategy</a>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis ipsum dicta optio pariatur nemo officiis illum iste voluptate perferendis. Doloremque aliquam dolor sit aspernatur quam, cumque ipsa iste delectus ea!</p>
+          </div>
+      </main>
   </body>
+  
+  
   </html>
